<resources>
    <string name="app_name">Projecte Cafeteria</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menjars">Menjars</string>
    <string name="begudres">Begudres</string>
    <string name="postres">Postres</string>
    <string name="pagament">Pagament</string>
    <string name="nav_open">Hola</string>
    <string name="nav_close">Adeu</string>
    <string name="total_0">Total: 0 €</string>
    <string name="iniciar_sessi">Iniciar Sessió</string>
    <string name="no_tens_compte">No tens compte?</string>
    <string name="inicia_sessi_amb_el_teu_usuari">Inicia sessió amb el teu usuari.</string>
    <string name="nom">Nom</string>
    <string name="contrassenya">Contrassenya</string>
    <string name="user">user</string>
    <string name="user_gmail_com">user@gmail.com</string>
    <string name="item">Item</string>
    <string name="menjar">Menjar</string>
    <string name="_0_00">0.00€</string>
    <string name="beguda">Beguda</string>
    <string name="total">Total:</string>
    <string name="no_tens_usuari_registre_t">No tens usuari? Registre\'t</string>
    <string name="mail">Mail</string>
    <string name="registre_t">Registre\'t</string>
    <string name="ja_tens_compte">Ja tens compte?</string>
    <string name="emplena_tots_els_camps">Emplena tots els camps!</string>
    <string name="usuari">"Usuari "</string>
    <string name="creat">" creat."</string>
    <string name="ja_existeix_un_usuari_amb_aquestes_credencials">Ja existeix un usuari amb aquestes credencials.</string>
</resources>