<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".Registre.RegisterActivity">

    <ImageView
        android:id="@+id/imageViewRegistre"
        android:layout_width="170dp"
        android:layout_height="151dp"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/baseline_person_add_24" />

    <TextView
        android:id="@+id/textViewTitleRegistre"
        android:layout_width="280dp"
        android:layout_height="93dp"
        android:layout_marginTop="20dp"
        android:text="@string/no_tens_usuari_registre_t"
        android:textAlignment="center"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewRegistre" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputMail"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        android:layout_width="291dp"
        android:layout_height="69dp"
        android:layout_marginTop="28dp"
        android:hint="@string/mail"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTitleRegistre"
        tools:ignore="MissingConstraints">

        <com.google.android.material.textfield.TextInputEditText

            android:id="@+id/editTextMail"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:inputType="text"
            android:textColorHint="#757575" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputNom"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        android:layout_width="291dp"
        android:layout_height="69dp"
        android:layout_marginTop="8dp"
        android:hint="@string/nom"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputMail"
        tools:ignore="MissingConstraints">

        <com.google.android.material.textfield.TextInputEditText

            android:id="@+id/editTextName"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:inputType="text"
            android:textColorHint="#757575" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputPassword"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        android:layout_width="291dp"
        android:layout_height="69dp"
        android:layout_marginTop="16dp"
        android:hint="@string/contrassenya"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputNom"
        tools:ignore="MissingConstraints">

        <com.google.android.material.textfield.TextInputEditText

            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:inputType="textPassword"
            android:textColorHint="#757575"
            tools:layout_editor_absoluteX="56dp"
            tools:layout_editor_absoluteY="440dp" />

    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/buttonRegistre"
        android:layout_width="125dp"
        android:layout_height="39dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/button_border"
        android:text="@string/registre_t"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputPassword" />

    <TextView
        android:id="@+id/textViewFooter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ja_tens_compte"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonRegistre"
        app:layout_constraintVertical_bias="0.052" />

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>